Prevent blurry lines in dynamic demand chart

--- a/app/assets/stylesheets/chart.sass
+++ b/app/assets/stylesheets/chart.sass
@@ -396,6 +396,8 @@ div.d3_container
 
 // Clickable legends in the dynamic demand curve chart.
 .dynamic_demand_curve
+  svg
+    shape-rendering: crispEdges
   .legend
     .legend-item
       &.hidden .rect
